# ttp

./: .gitignore  Cargo.toml  LICENSE  PROJECT_SPEC_V0.1.md  README.md
docs/prompts/: MASTER_PROMPT.md  PROMPT_02_TYPING_ENGINE.md
docs/prompts/v01_prompts/: PROMPT_01_PROJECT_SETUP.md  PROMPT_03_TUI_SPEED_TEST.md  PROMPT_04_COMMAND_MODE.md  PROMPT_05_STORAGE_CONFIG.md  PROMPT_06_HISTORY_PAGE.md  PROMPT_07_V01_POLISH_AND_README.md
docs/prompts/v021_prompts/: PROMPT_01_V0.2.1_CONTROL_CLEANUP.md
docs/prompts/v022_prompts/: PROMPT_01_V0.2.2_CONTEXT_AND_PLAN.md  PROMPT_02_TYPING_LAYOUT_AND_SCROLL.md  PROMPT_03_TIMER_COUNTER_AND_CARET.md  PROMPT_04_PROFILE_STATS_PAGE.md  PROMPT_05_STATS_PAGE_NAVIGATION_AND_FINAL_POLISH.md  PROMPT_06_PATCH_PROFILE_SCROLL_CLAMP.md
docs/prompts/v023_ui-redesign/: PROMPT_01_V0.2.3_UI_CONTEXT_REVIEW.md  PROMPT_02_V0.2.3_MAIN_UI_REDESIGN.md  PROMPT_03_V0.2.3_RESPONSIVE_LAYOUT.md  PROMPT_04_V0.2.3_FINAL_POLISH_QA.md  PROMPT_05_V0.2.3_MINOR_EDITS.md  PROMPT_06_V0.2.3_SPECIFIC_PATCH.md
docs/prompts/v024/: PROMPT_01_V0.2.4_TYPING_LOGIC_IMPROVEMENTS.md  PROMPT_02_V0.2.4_POLISH.md
src/: app.rs  command.rs  event.rs  main.rs
src/core/: mod.rs  scoring.rs  test_session.rs  text_generator.rs  typing_engine.rs
src/core/language_modes/: azerbaijani_basic.rs  azerbaijani_extended.rs  azerbaijani_hard.rs  english_basic.rs  english_extended.rs  english_hard.rs  mod.rs  russian_basic.rs  russian_extended.rs  (+4 more)
src/storage/: config.rs  database.rs  models.rs
src/theme/: default.rs
src/ui/: history.rs  mod.rs  result.rs  speed_test.rs
(+4 files in other folders)
